--- a/package.json
+++ b/package.json
@@ -10,15 +10,21 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "eslint-config-universe": "^11.0.0",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
+    "react-native-web": "0.17.7",
+    "expo-image-picker": "~13.1.1",
+    "expo-sharing": "~10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
   },
-  "private": true
+  "private": true,
+  "eslintConfig": {
+    "extends": "universe/native"
+  }
 }
